--- a/user-service.yml
+++ b/user-service.yml
@@ -13,4 +13,4 @@ gateway:
   ip: 192.168.219.79
 
 order_service:
-  url: http://127.0.0.1:8082/order-service/%s/orders
+  url: http://ORDER-SERIVCE/order-service/%s/orders
