[edit] feignclient exception 로그 추가

--- a/user-service.yml
+++ b/user-service.yml
@@ -14,3 +14,5 @@ gateway:
 
 order_service:
   url: http://ORDER-SERVICE/order-service/%s/orders
+  exception:
+    orders_is_empty: User's order is empty.
