--- a/user-service.yml
+++ b/user-service.yml
@@ -15,4 +15,4 @@ gateway:
 order_service:
   url: http://ORDER-SERVICE/order-service/%s/orders
   exception:
-    orders_is_empty: User's order is empty.
+    orders_is_empty: there is no item.
